--- a/EuroMobileApp/EuroMobileApp/Views/SignaturePageContentView/Covid19ContentView.xaml
+++ b/EuroMobileApp/EuroMobileApp/Views/SignaturePageContentView/Covid19ContentView.xaml
@@ -9,16 +9,23 @@
             <BindableLayout.ItemTemplate>
                 <DataTemplate>
 
-                    <Grid ColumnDefinitions="*,Auto">
+                    <Grid ColumnDefinitions="Auto,*,Auto">
                         <Label
                             Grid.Column="0"
+                            FontFamily="{StaticResource RobotoMedium}"
+                            FontSize="Medium"
+                            LineBreakMode="WordWrap"
+                            Text="{Binding QuestionNo}"
+                            VerticalOptions="Start" />
+                        <Label
+                            Grid.Column="1"
                             FontFamily="{StaticResource RobotoMedium}"
                             FontSize="Medium"
                             LineBreakMode="WordWrap"
                             Text="{Binding QuestionTitle}"
                             VerticalOptions="Start" />
                         <CheckBox
-                            Grid.Column="1"
+                            Grid.Column="2"
                             IsChecked="{Binding QuestionAnswer}"
                             VerticalOptions="Start" />
                     </Grid>
