--- a/EuroMobileApp/EuroMobileApp/Views/SignaturePageContentView/Covid19ContentView.xaml
+++ b/EuroMobileApp/EuroMobileApp/Views/SignaturePageContentView/Covid19ContentView.xaml
@@ -5,33 +5,44 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     Margin="5,10,0,10">
     <ContentView.Content>
-        <StackLayout BindableLayout.ItemsSource="{Binding covid19FormModels}" VerticalOptions="StartAndExpand">
-            <BindableLayout.ItemTemplate>
-                <DataTemplate>
+        <ScrollView
+            HorizontalOptions="FillAndExpand"
+            VerticalOptions="FillAndExpand"
+            VerticalScrollBarVisibility="Never">
 
-                    <Grid ColumnDefinitions="Auto,*,Auto">
-                        <Label
-                            Grid.Column="0"
-                            FontFamily="{StaticResource RobotoMedium}"
-                            FontSize="Medium"
-                            LineBreakMode="WordWrap"
-                            Text="{Binding QuestionNo}"
-                            VerticalOptions="Start" />
-                        <Label
-                            Grid.Column="1"
-                            FontFamily="{StaticResource RobotoMedium}"
-                            FontSize="Medium"
-                            LineBreakMode="WordWrap"
-                            Text="{Binding QuestionTitle}"
-                            VerticalOptions="Start" />
-                        <CheckBox
-                            Grid.Column="2"
-                            IsChecked="{Binding QuestionAnswer}"
-                            VerticalOptions="Start" />
-                    </Grid>
+            <StackLayout BindableLayout.ItemsSource="{Binding covid19FormModels}">
+                <BindableLayout.ItemTemplate>
+                    <DataTemplate>
 
-                </DataTemplate>
-            </BindableLayout.ItemTemplate>
-        </StackLayout>
+                        <Grid
+                            ColumnDefinitions="Auto,*,Auto"
+                            HorizontalOptions="CenterAndExpand"
+                            VerticalOptions="FillAndExpand">
+                            <Label
+                                Grid.Column="0"
+                                FontFamily="{StaticResource RobotoMedium}"
+                                FontSize="Medium"
+                                LineBreakMode="WordWrap"
+                                Text="{Binding QuestionNo}"
+                                VerticalOptions="Start" />
+                            <Label
+                                Grid.Column="1"
+                                FontFamily="{StaticResource RobotoMedium}"
+                                FontSize="Medium"
+                                LineBreakMode="WordWrap"
+                                Text="{Binding QuestionTitle}"
+                                VerticalOptions="Start" />
+                            <CheckBox
+                                Grid.Column="2"
+                                IsChecked="{Binding QuestionAnswer}"
+                                VerticalOptions="Start" />
+                        </Grid>
+
+                    </DataTemplate>
+                </BindableLayout.ItemTemplate>
+            </StackLayout>
+
+        </ScrollView>
+
     </ContentView.Content>
 </ContentView>
