--- a/EuroMobileApp/EuroMobileApp/Views/SignaturePageContentView/Covid19ContentView.xaml
+++ b/EuroMobileApp/EuroMobileApp/Views/SignaturePageContentView/Covid19ContentView.xaml
@@ -3,44 +3,115 @@
     x:Class="EuroMobileApp.Views.SignaturePageContentView.Covid19ContentView"
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:Yummy="clr-namespace:Xamarin.Forms.PancakeView;assembly=Xamarin.Forms.PancakeView"
+    xmlns:trans="clr-namespace:EuroMobileApp.Helpers"
     Margin="5,10,0,10">
     <ContentView.Content>
-        <ScrollView
-            HorizontalOptions="FillAndExpand"
-            VerticalOptions="FillAndExpand"
-            VerticalScrollBarVisibility="Never">
+        <ScrollView VerticalScrollBarVisibility="Never">
+            <Grid RowDefinitions="*,auto">
+                <StackLayout Grid.Row="0" BindableLayout.ItemsSource="{Binding covid19FormModels}">
+                    <BindableLayout.ItemTemplate>
+                        <DataTemplate>
 
-            <StackLayout BindableLayout.ItemsSource="{Binding covid19FormModels}">
-                <BindableLayout.ItemTemplate>
-                    <DataTemplate>
+                            <Grid
+                                ColumnDefinitions="Auto,*,Auto"
+                                HorizontalOptions="CenterAndExpand"
+                                VerticalOptions="FillAndExpand">
+                                <Label
+                                    Grid.Column="0"
+                                    FontFamily="{StaticResource RobotoMedium}"
+                                    FontSize="Medium"
+                                    LineBreakMode="WordWrap"
+                                    Text="{Binding QuestionNo}"
+                                    VerticalOptions="Start" />
+                                <Label
+                                    Grid.Column="1"
+                                    FontFamily="{StaticResource RobotoMedium}"
+                                    FontSize="Medium"
+                                    LineBreakMode="WordWrap"
+                                    Text="{Binding QuestionTitle}"
+                                    VerticalOptions="Start" />
+                                <CheckBox
+                                    Grid.Column="2"
+                                    IsChecked="{Binding QuestionAnswer}"
+                                    VerticalOptions="Start" />
+                            </Grid>
 
-                        <Grid
-                            ColumnDefinitions="Auto,*,Auto"
-                            HorizontalOptions="CenterAndExpand"
-                            VerticalOptions="FillAndExpand">
+                        </DataTemplate>
+                    </BindableLayout.ItemTemplate>
+                </StackLayout>
+                <StackLayout
+                    Grid.Row="1"
+                    Margin="5,10,5,10"
+                    Spacing="10"
+                    VerticalOptions="End">
+                    <Yummy:PancakeView Border="{Yummy:BorderMarkup Color={DynamicResource black}, Thickness=1}" HeightRequest="50">
+
+                        <StackLayout Orientation="Horizontal" VerticalOptions="Center">
                             <Label
                                 Grid.Column="0"
-                                FontFamily="{StaticResource RobotoMedium}"
-                                FontSize="Medium"
-                                LineBreakMode="WordWrap"
-                                Text="{Binding QuestionNo}"
-                                VerticalOptions="Start" />
+                                Margin="10,0,10,0"
+                                HorizontalOptions="Start">
+                                <Label.FormattedText>
+                                    <FormattedString>
+                                        <Span
+                                            FontFamily="{StaticResource RobotoCondensedBold}"
+                                            FontSize="16"
+                                            Text="{trans:Translate OrderTotalCustomerSignature}" />
+                                        <Span Text=" " />
+
+                                    </FormattedString>
+                                </Label.FormattedText>
+                            </Label>
                             <Label
                                 Grid.Column="1"
-                                FontFamily="{StaticResource RobotoMedium}"
-                                FontSize="Medium"
-                                LineBreakMode="WordWrap"
-                                Text="{Binding QuestionTitle}"
-                                VerticalOptions="Start" />
-                            <CheckBox
-                                Grid.Column="2"
-                                IsChecked="{Binding QuestionAnswer}"
-                                VerticalOptions="Start" />
-                        </Grid>
+                                Margin="0,0,5,0"
+                                HorizontalOptions="EndAndExpand">
+                                <Label.FormattedText>
+                                    <FormattedString>
 
-                    </DataTemplate>
-                </BindableLayout.ItemTemplate>
-            </StackLayout>
+                                        <Span Text=" " />
+                                        <Span
+                                            FontFamily="{StaticResource RobotoCondensedBold}"
+                                            FontSize="16"
+                                            Text="{trans:Translate PleaseSignLabel}"
+                                            TextColor="{DynamicResource blueDark}"
+                                            TextDecorations="Underline">
+                                            <Span.GestureRecognizers>
+                                                <TapGestureRecognizer Command="{Binding PleaseSigninCommand}" />
+                                            </Span.GestureRecognizers>
+                                        </Span>
+                                    </FormattedString>
+                                </Label.FormattedText>
+                            </Label>
+                        </StackLayout>
+                    </Yummy:PancakeView>
+
+                    <Yummy:PancakeView
+                        Border="{Yummy:BorderMarkup Color={DynamicResource black},
+                                                    Thickness=1}"
+                        HeightRequest="100"
+                        VerticalOptions="Center">
+                        <StackLayout>
+
+                            <Label
+                                FontAttributes="Italic"
+                                FontFamily="{StaticResource RobotoCondensedBoldItalic}"
+                                FontSize="24"
+                                HorizontalOptions="Center"
+                                VerticalOptions="CenterAndExpand">
+                                <Label.FormattedText>
+                                    <FormattedString>
+                                        <Span Text="{Binding SignatureViewTitle}" />
+                                    </FormattedString>
+                                </Label.FormattedText>
+                            </Label>
+                        </StackLayout>
+
+                    </Yummy:PancakeView>
+                </StackLayout>
+            </Grid>
+
 
         </ScrollView>
 
